--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -190,27 +190,14 @@
             </div>
           </div>
           -->
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="{% url 'blog:blog_list' %} ">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page"> Search result </li>
+            </ol>
+          </nav>
+           <h1> Your Search: {{ query }} </h1>
 
-          <!-- Search Section -->
-<div class="bg-navy">
-  <div class="bg-img-hero-center" style="background-image: url({% static "blueberry/assets/svg/components/abstract-shapes-19.svg" %});">
-    <div class="container space-1">
-      <div class="w-lg-80 mx-lg-auto">
-        <!-- Input -->
-        <form action="{% url 'blog:search_blog' %}" class="input-group input-group-merge input-group-borderless">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="askQuestions">
-              <i class="fas fa-search"></i>
-            </span>
-          </div>
-          <input type="search" class="form-control" placeholder="Search for answers"name="q" aria-label="Search for answers" aria-describedby="askQuestions">
-        </form>
-        <!-- End Input -->
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End Search Section -->
         </div>
       </div>
       <!-- End User Profile Section -->
@@ -219,7 +206,7 @@
       <div class="container space-bottom-3">
         <div class="w-md-75 w-lg-60 mx-md-auto">
          
-            {% for post in page_obj %}
+            {% for post in queryset %}
               
             
           <!-- End Blog Card -->
@@ -231,7 +218,7 @@
             />
 
             <div class="card-body">
-              
+             
               <h3>
                 <a class="text-inherit" href="{{ post.get_absolute_url }}"
                   >{{ post.title }}</a
@@ -269,6 +256,7 @@
           <div class="space-bottom-2"></div>
 
             <!-- Pagination -->
+            <!-- 
             <nav aria-label="Page navigation">
               <ul class="pagination mb-0">
                 
@@ -327,6 +315,7 @@
               
               </ul>
             </nav>
+             -->
             <!-- End Pagination -->
         </div>
       </div>
