--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -193,7 +193,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="{% url 'blog:blog_list' %} ">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page"> Search result </li>
+              <li class="breadcrumb-item active" aria-current="page"> Search Results </li>
             </ol>
           </nav>
            <h1> Your Search: {{ query }} </h1>
