--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -7,7 +7,9 @@
 	<title>jonaid blog </title>
 	<meta name="description" content="Jonaid  - Minimal Blog & Magazine HTML Theme">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="">
+    <!-- Favicon -->
+	<link rel="shortcut icon" href="{% static "blog/favicon.ico" %}" />
+
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="{% static "blog/css/bootstrap.min.css" %}" type="text/css" media="all">
